Make translations.js effective

--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@ title: FinClipThe SuperApp Platform
   </section>
 </main>
 
+<script src="{{ '/assets/translations.js' | relative_url }}"></script>
 <script src="{{ '/assets/script.js' | relative_url }}"></script>
