--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@ title: FinClip - The SuperApp Platform
   </section>
 </main>
 
-<script src="{{ '/assets/translations.js' | relative_url }}"></script>
-<script src="{{ '/assets/script.js' | relative_url }}"></script>
+<script src="{{ '/assets/translations.js' | relative_url }}?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ '/assets/script.js' | relative_url }}?v={{ site.time | date: '%s' }}"></script>
