replace Liquid links with static URLs

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ permalink: /
     <h2>Redirecting…</h2>
     <p>If you are not redirected automatically, choose your language:</p>
     <p>
-      <a class="btn" href="{{ '/en/' | relative_url }}">English</a>
-      <a class="btn" href="{{ '/zh/' | relative_url }}">中文</a>
+      <a class="btn" href="/en/">English</a>
+      <a class="btn" href="/zh/">中文</a>
     </p>
   </section>
 </main>
