--- a/en/index.html
+++ b/en/index.html
@@ -13,12 +13,12 @@ permalink: /en/
       <article class="product-card">
         <h3>FinClip — The SuperApp Platform</h3>
         <p>Build, embed, and manage mini‑apps across your mobile ecosystem. Enable SuperApp experiences within your existing apps.</p>
-        <p><a class="btn" href="{{ '/en/finclip.html' | relative_url }}">Learn more →</a></p>
+        <p><a class="btn" href="/en/finclip.html">Learn more →</a></p>
       </article>
       <article class="product-card">
         <h3>NeuronKit — Agentic Middleware</h3>
         <p>Turn any mobile app and IoT device into an agentic system. Orchestrate capabilities, policies, and automation safely.</p>
-        <p><a class="btn" href="{{ '/en/neuronkit.html' | relative_url }}">Learn more →</a></p>
+        <p><a class="btn" href="/en/neuronkit.html">Learn more →</a></p>
       </article>
     </div>
   </section>
