--- a/zh/index.html
+++ b/zh/index.html
@@ -13,12 +13,12 @@ permalink: /zh/
       <article class="product-card">
         <h3>FinClip — 超级应用平台</h3>
         <p>在现有移动应用中嵌入并管理小程序，为用户带来 SuperApp 体验。</p>
-        <p><a class="btn" href="{{ '/zh/finclip.html' | relative_url }}">了解更多 →</a></p>
+        <p><a class="btn" href="/zh/finclip.html">了解更多 →</a></p>
       </article>
       <article class="product-card">
         <h3>NeuronKit — Agentic 中间件</h3>
         <p>让任何移动应用与 IoT 设备具备 Agentic 能力，以策略与上下文安全编排与自动化。</p>
-        <p><a class="btn" href="{{ '/zh/neuronkit.html' | relative_url }}">了解更多 →</a></p>
+        <p><a class="btn" href="/zh/neuronkit.html">了解更多 →</a></p>
       </article>
     </div>
   </section>
