Fix mermeid diagram

--- a/en/neuronkit.html
+++ b/en/neuronkit.html
@@ -75,7 +75,7 @@
 flowchart LR
   subgraph D[Device]
     A[App + NeuronKit SDK]
-    S[[On-Device Sandbox<br/>(PEP/PDP)]]
+    S[[On-Device Sandbox\n(PEP/PDP)]]
   end
   subgraph C[Cloud]
     M[(Context Memory Server)]
