--- a/en/neuronkit.html
+++ b/en/neuronkit.html
@@ -82,10 +82,11 @@
           <div class="glass rounded-3xl p-6 shadow-xl ring-1 ring-zinc-200/60 dark:ring-zinc-800/60">
             <div class="text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400 mb-2">Live Concept Diagram</div>
             <div class="mermaid">
+%%{init: {"securityLevel": "strict", "flowchart": {"htmlLabels": false}} }%%
 flowchart LR
   subgraph D[Device]
     A[App + NeuronKit SDK]
-    S[[On-Device Sandbox\n(PEP/PDP)]]
+    S["On-Device Sandbox\n(PEP/PDP)"]
   end
   subgraph C[Cloud]
     M[(Context Memory Server)]
