--- a/en/neuronkit.html
+++ b/en/neuronkit.html
@@ -67,10 +67,10 @@
       <div class="grid lg:grid-cols-2 gap-10 items-center">
         <div>
           <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">
-            Turn any app into an <span class="gradient-text">agent</span>.
+            Turn any app into an <span class="gradient-text">agentic experience</span>.
           </h1>
           <p class="mt-6 text-lg text-zinc-700 dark:text-zinc-300 max-w-2xl">
-            <strong>NeuronKit</strong> is the Agentic Context SDK: on-device sandboxing, rich device context, cloud memories, and a conversational UI—so your mobile or IoT app can understand, decide, and safely act.
+            <strong>NeuronKit</strong> is a device-side SDK and sandbox that transforms mobile apps and IoT platforms into context-aware, secure, and agent-ready systems. Inference happens in the cloud, but actions happen safely on the device.
           </p>
           <div class="mt-8 flex flex-wrap gap-3">
             <a href="#cta" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">Request Early Access</a>
