fix incorrect url

--- a/en/index.html
+++ b/en/index.html
@@ -15,7 +15,7 @@ permalink: /en/
       <article class="product-card">
         <h3>NeuronKit — Agentic Middleware</h3>
         <p>Turn any mobile app and IoT device into an agentic system. Orchestrate capabilities, policies, and automation safely.</p>
-        <p><a class="btn" href="/en/index.html">Learn more →</a></p>
+        <p><a class="btn" href="/en/neuronkit/index.html">Learn more →</a></p>
       </article>
     </div>
   </section>
