--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -124,6 +124,14 @@ flowchart LR
           <h3 class="font-semibold text-xl">Dialog Stream UX</h3>
           <p class="mt-2 text-zinc-600 dark:text-zinc-400">ConvoUI blends natural language with embedded UI components so users can talk and tap their way through tasks.</p>
         </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-xl">Drop‑in for Legacy Apps</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Integrate as middleware with minimal code changes. Register app features as capabilities; NeuronKit handles context, policy checks, and UI.</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-xl">Built for Devs & Enterprises</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Simple developer APIs plus enterprise controls for compliance, observability, and governance.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -246,8 +254,8 @@ flowchart LR
       <h2 class="text-3xl md:text-4xl font-extrabold">Be part of the agentic shift</h2>
       <p class="mt-4 text-zinc-600 dark:text-zinc-400">We’re assembling our first cohort of partners and early adopters. Get access to the preview SDK, provide feedback, and help shape the standard for context engineering.</p>
       <div class="mt-8 flex flex-wrap items-center justify-center gap-3">
-        <a href="mailto:hello@agentic.github.io?subject=NeuronKit%20Early%20Access" class="px-6 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">Request Early Access</a>
-        <a href="https://github.com/agentic" target="_blank" rel="noreferrer" class="px-6 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">Star on GitHub</a>
+        <a href="mailto:contact@finogeeks.com?subject=NeuronKit%20Early%20Access" class="px-6 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">Request Early Access</a>
+        <a href="https://finogeeks.github.io/agentic" target="_blank" rel="noreferrer" class="px-6 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">Star on GitHub</a>
       </div>
     </div>
   </section>
