--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -179,7 +179,7 @@ flowchart LR
       <h2 class="text-3xl md:text-4xl font-bold">White Paper</h2>
       <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">Dive deeper into NeuronKit’s architecture, capability model, and security posture. Learn how cloud memory, on-device sandboxing (PDP/PEP), and ConvoUI work together to enable safe, context-rich agentic experiences.</p>
       <div class="mt-6 flex flex-wrap gap-3">
-        <a href="/en/neuronkit/intro.html" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">Read Online</a>
+        <a href="/en/neuronkit/whitepaper/" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">Read Online</a>
         <a href="#" class="px-5 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">Download PDF (soon)</a>
       </div>
     </div>
