create chinese version

--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -55,6 +55,7 @@
         <div class="flex items-center gap-3">
           <a href="https://finogeeks.github.io/agentic" target="_blank" rel="noreferrer" class="px-3 py-2 rounded-xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 text-sm">GitHub</a>
           <a href="#cta" class="px-4 py-2 rounded-xl bg-indigo-600 hover:bg-indigo-500 text-white text-sm font-medium">Join Waitlist</a>
+          <a href="/zh/neuronkit/index.html" class="px-3 py-2 rounded-xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 text-sm">中文</a>
         </div>
       </div>
     </div>
