improve hero section and why section in landing pages

--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -68,11 +68,18 @@
       <div class="grid lg:grid-cols-2 gap-10 items-center">
         <div>
           <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">
-            Turn any app into an <span class="gradient-text">agentic experience</span>.
+            Clickstreams won’t cut it. Build <span class="gradient-text">dialog streams</span> with proactive agents.
           </h1>
           <p class="mt-6 text-lg text-zinc-700 dark:text-zinc-300 max-w-2xl">
-            <strong>NeuronKit</strong> is a device-side SDK and sandbox that transforms mobile apps and IoT platforms into context-aware, secure, and agent-ready systems. Inference happens in the cloud, but actions happen safely on the device.
+            In the AI age, legacy apps can’t stay bound to static funnels and passive carts. To join the shift, apps need more than language models—they need <strong>context engineering</strong>.
+            <strong>NeuronKit</strong> provides a total solution: it collects real‑time device data, organizes it into <em>semantic</em>, <em>episodic</em>, and <em>procedural</em> memories, and executes actions securely via a unique <strong>on‑device capability‑model sandbox</strong>. Unlike cloud‑only sandboxes, NeuronKit bridges <strong>cloud inference</strong> with <strong>safe local execution</strong>, enabling any app or device to become agentic.
           </p>
+          <div class="mt-5 flex flex-wrap gap-2">
+            <span class="px-2.5 py-1 text-xs rounded-full bg-indigo-600/10 text-indigo-700 dark:text-indigo-300 border border-indigo-600/20">Dialog streams</span>
+            <span class="px-2.5 py-1 text-xs rounded-full bg-emerald-600/10 text-emerald-700 dark:text-emerald-300 border border-emerald-600/20">Context engineering</span>
+            <span class="px-2.5 py-1 text-xs rounded-full bg-amber-600/10 text-amber-700 dark:text-amber-300 border border-amber-600/20">On‑device sandbox</span>
+            <span class="px-2.5 py-1 text-xs rounded-full bg-cyan-600/10 text-cyan-700 dark:text-cyan-300 border border-cyan-600/20">Cloud ⇄ Edge bridge</span>
+          </div>
           <div class="mt-8 flex flex-wrap gap-3">
             <a href="#cta" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">Request Early Access</a>
             <a href="#whitepaper" class="px-5 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">Read the White Paper</a>
@@ -114,24 +121,24 @@ flowchart LR
       <h2 class="text-3xl md:text-4xl font-bold">Why NeuronKit</h2>
       <div class="mt-6 grid md:grid-cols-3 gap-6">
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">Context is Intelligence</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Capture rich device-side signals and organize them into semantic, episodic, and procedural memories for truly relevant agent reasoning.</p>
+          <h3 class="font-semibold text-xl">From Clickstreams → Dialog Streams</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Move beyond static funnels. Power proactive, context‑aware conversations that guide users to outcomes.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">Secure On‑Device Actions</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">A capability model + policy engine ensures AI-triggered actions are vetted, consented, and auditable—before your app does anything.</p>
+          <h3 class="font-semibold text-xl">Context Engineering</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Continuously capture device signals and organize them into <em>semantic</em>, <em>episodic</em>, and <em>procedural</em> memory for better reasoning.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">Dialog Stream UX</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">ConvoUI blends natural language with embedded UI components so users can talk and tap their way through tasks.</p>
+          <h3 class="font-semibold text-xl">On‑Device Capability Sandbox</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">A capability model + policy engine vets, consents, and audits AI‑triggered actions—before anything runs.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">Drop‑in for Legacy Apps</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Integrate as middleware with minimal code changes. Register app features as capabilities; NeuronKit handles context, policy checks, and UI.</p>
+          <h3 class="font-semibold text-xl">Cloud Inference, Local Execution</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Bridge cloud models with safe edge execution. Keep privacy‑sensitive actions on device under policy control.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <h3 class="font-semibold text-xl">Built for Devs & Enterprises</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Simple developer APIs plus enterprise controls for compliance, observability, and governance.</p>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Drop‑in middleware, simple APIs, and enterprise‑grade observability, compliance, and governance.</p>
         </div>
       </div>
     </div>
