--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -66,11 +66,18 @@
       <div class="grid lg:grid-cols-2 gap-10 items-center">
         <div>
           <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">
-            让任何应用具备 <span class="gradient-text">Agentic 体验</span>。
+            仅靠“点击流”已不够。用 <span class="gradient-text">对话流</span> 与主动代理重构体验。
           </h1>
           <p class="mt-6 text-lg text-zinc-700 dark:text-zinc-300 max-w-2xl">
-            <strong>NeuronKit</strong> 是设备侧 SDK 与沙箱，让移动应用与 IoT 平台具备上下文感知、安全且可控的代理执行能力。推理在云端，动作安全地在设备上执行。
+            在 AI 时代，传统应用不能再被静态漏斗与被动购物车束缚。要完成跃迁，应用需要的不止是大语言模型，还需要 <strong>上下文工程（Context Engineering）</strong>。
+            <strong>NeuronKit</strong> 提供整套方案：采集实时设备数据，组织为 <em>语义</em>、<em>情景</em> 与 <em>程序性</em> 记忆，并通过独特的 <strong>设备侧能力模型沙箱</strong> 安全执行动作。不同于纯云端沙箱，NeuronKit 将 <strong>云端推理</strong> 与 <strong>本地安全执行</strong> 有机桥接，让任何应用与设备都能具备 Agentic 能力。
           </p>
+          <div class="mt-5 flex flex-wrap gap-2">
+            <span class="px-2.5 py-1 text-xs rounded-full bg-indigo-600/10 text-indigo-700 dark:text-indigo-300 border border-indigo-600/20">对话流</span>
+            <span class="px-2.5 py-1 text-xs rounded-full bg-emerald-600/10 text-emerald-700 dark:text-emerald-300 border border-emerald-600/20">上下文工程</span>
+            <span class="px-2.5 py-1 text-xs rounded-full bg-amber-600/10 text-amber-700 dark:text-amber-300 border border-amber-600/20">设备侧沙箱</span>
+            <span class="px-2.5 py-1 text-xs rounded-full bg-cyan-600/10 text-cyan-700 dark:text-cyan-300 border border-cyan-600/20">云 ⇄ 边桥接</span>
+          </div>
           <div class="mt-8 flex flex-wrap gap-3">
             <a href="#cta" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">申请早期访问</a>
             <a href="#whitepaper" class="px-5 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">阅读白皮书</a>
@@ -112,24 +119,24 @@ flowchart LR
       <h2 class="text-3xl md:text-4xl font-bold">为什么选择 NeuronKit</h2>
       <div class="mt-6 grid md:grid-cols-3 gap-6">
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">上下文即智能</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">采集设备侧信号并组织为语义/情景/程序性记忆，支持更相关的推理。</p>
+          <h3 class="font-semibold text-xl">从点击流 → 对话流</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">跳出静态漏斗，用主动、具上下文的对话引导用户达成目标。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">安全的设备侧动作</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">能力模型 + 策略引擎，确保代理触发的动作在执行前得到校验、同意与审计。</p>
+          <h3 class="font-semibold text-xl">上下文工程</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">持续采集设备信号，并组织为 <em>语义</em>、<em>情景</em>、<em>程序性</em> 记忆，提升推理质量。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">对话流式体验</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">ConvoUI 将自然语言与内嵌 UI 组件结合，用户可“说 + 点”完成任务。</p>
+          <h3 class="font-semibold text-xl">设备侧能力沙箱</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">能力模型 + 策略引擎，在执行前完成校验/同意/审计，保障安全可控。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">无侵入集成</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">作为中间件快速接入，最小改动即可把功能注册为能力，由 NeuronKit 负责上下文、策略与 UI。</p>
+          <h3 class="font-semibold text-xl">云端推理，本地执行</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">桥接云侧模型与边缘执行，将隐私敏感动作留在设备并受策略控制。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
           <h3 class="font-semibold text-xl">开发者与企业友好</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">简单 API + 企业级合规、可观测与治理能力。</p>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">中间件无侵入集成、简单 API，企业级可观测、合规与治理。</p>
         </div>
       </div>
     </div>
