improve landing page to make it more easy to understand

--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -68,11 +68,10 @@
       <div class="grid lg:grid-cols-2 gap-10 items-center">
         <div>
           <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">
-            Clickstreams won’t cut it. Build <span class="gradient-text">dialog streams</span> with proactive agents.
+            Legacy Apps Are Stuck in the Past—Unlock <span class="gradient-text">AI‑Powered Conversations</span> Without the Overhaul
           </h1>
           <p class="mt-6 text-lg text-zinc-700 dark:text-zinc-300 max-w-2xl">
-            In the AI age, legacy apps can’t stay bound to static funnels and passive carts. To join the shift, apps need more than language models—they need <strong>context engineering</strong>.
-            <strong>NeuronKit</strong> provides a total solution: it collects real‑time device data, organizes it into <em>semantic</em>, <em>episodic</em>, and <em>procedural</em> memories, and executes actions securely via a unique <strong>on‑device capability‑model sandbox</strong>. Unlike cloud‑only sandboxes, NeuronKit bridges <strong>cloud inference</strong> with <strong>safe local execution</strong>, enabling any app or device to become agentic.
+            Your traditional mobile apps rely on rigid clicks and forms, but users demand intuitive, proactive interactions. As AI agents redefine human‑computer interfaces, don’t get left behind—join the wave effortlessly. <strong>NeuronKit</strong> is the non‑intrusive SDK that upgrades your apps with real‑time context awareness, secure on‑device actions, and seamless dialog flows. Turn passive experiences into agentic ones, boosting engagement in e‑commerce, fintech, and more—while respecting privacy and requiring minimal code changes.
           </p>
           <div class="mt-5 flex flex-wrap gap-2">
             <span class="px-2.5 py-1 text-xs rounded-full bg-indigo-600/10 text-indigo-700 dark:text-indigo-300 border border-indigo-600/20">Dialog streams</span>
@@ -115,30 +114,40 @@ flowchart LR
     </div>
   </section>
 
+  <!-- Challenges -->
+  <section class="py-12 md:py-20" id="challenges">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <h2 class="text-3xl md:text-4xl font-bold">Facing the AI Shift? You’re Not Alone—Here’s Your Path Forward</h2>
+      <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">
+        In a world where AI is revolutionizing human‑computer interactions, legacy mobile apps face tough hurdles: rigid UIs that frustrate users, privacy rules that break old tracking models, and the pressure to adapt or be replaced. But there’s massive opportunity in the long tail of apps ready for AI upgrades. NeuronKit makes it simple: non‑intrusively integrate context‑aware agents to supplement your flows, augment personalization, or evolve into fully proactive experiences. No full rewrites—just empowering tools to join the agentic future.
+      </p>
+    </div>
+  </section>
+
   <!-- Why NeuronKit -->
   <section class="py-12 md:py-20" id="why">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold">Why NeuronKit</h2>
+      <h2 class="text-3xl md:text-4xl font-bold">Why Upgrade Your Legacy Apps with NeuronKit Now</h2>
       <div class="mt-6 grid md:grid-cols-3 gap-6">
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">From Clickstreams → Dialog Streams</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Move beyond static funnels. Power proactive, context‑aware conversations that guide users to outcomes.</p>
+          <h3 class="font-semibold text-xl">From Rigid Flows to Proactive Dialogs</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Escape click‑based UX that frustrates users and misses intent. Embrace agentic interfaces that anticipate needs through natural conversations—building loyalty.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">Context Engineering</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Continuously capture device signals and organize them into <em>semantic</em>, <em>episodic</em>, and <em>procedural</em> memory for better reasoning.</p>
+          <h3 class="font-semibold text-xl">Effortless Context Capture</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Stop guessing needs from sparse data. NeuronKit gathers real‑time device insights—location, sensors, app signals—and organizes them into smart memories.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">On‑Device Capability Sandbox</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">A capability model + policy engine vets, consents, and audits AI‑triggered actions—before anything runs.</p>
+          <h3 class="font-semibold text-xl">Secure, On‑Device Power</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Run AI actions where they matter—on the device—with built‑in consents and audits. Bridge cloud smarts with local control and privacy.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">Cloud Inference, Local Execution</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Bridge cloud models with safe edge execution. Keep privacy‑sensitive actions on device under policy control.</p>
+          <h3 class="font-semibold text-xl">Built for Real Developers Like You</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Maintain a fleet or build a superapp—simple APIs and drop‑in tools add AI fast. Upgrade the long tail of legacy apps without starting from scratch.</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">Built for Devs & Enterprises</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Drop‑in middleware, simple APIs, and enterprise‑grade observability, compliance, and governance.</p>
+          <h3 class="font-semibold text-xl">The Future is Agentic</h3>
+          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Traditional apps are being augmented—or replaced—by AI‑driven HCI. Lead the charge and make your apps adaptive, engaging, and ready for tomorrow.</p>
         </div>
       </div>
     </div>
@@ -151,13 +160,13 @@ flowchart LR
         <div>
           <h2 class="text-3xl md:text-4xl font-bold">Key Features</h2>
           <ul class="mt-6 space-y-4 text-zinc-700 dark:text-zinc-300">
-            <li><span class="font-medium">Rich Context SDK:</span> location, sensors, app telemetry, and more—streamed as scenario context.</li>
-            <li><span class="font-medium">On‑Device Sandbox:</span> define features → capabilities → primitives; require consent for sensitive actions.</li>
-            <li><span class="font-medium">Cloud Memory Server:</span> time-ordered logs promoted into semantic, episodic, and procedural memory.</li>
-            <li><span class="font-medium">Agent Routing:</span> route intents to registered agents; receive action plans back.</li>
-            <li><span class="font-medium">ConvoUI:</span> drop-in voice + chat with inline UI widgets (buttons, forms, product tiles).</li>
-            <li><span class="font-medium">Analytics & Audit:</span> policy decisions, consents, and action trails for compliance.</li>
-            <li><span class="font-medium">Platform-agnostic:</span> Android / iOS / IoT friendly; cloud-neutral.</li>
+            <li><span class="font-medium">Seamless Context SDK:</span> effortlessly stream device data like location and sensors into actionable insights—non‑intrusively upgrading awareness without codebase chaos.</li>
+            <li><span class="font-medium">On‑Device Safeguard Sandbox:</span> define permissions once; let AI actions run securely with automatic consents—goodbye privacy headaches.</li>
+            <li><span class="font-medium">Smart Memory Hub:</span> build a persistent “brain” for your app—time‑stamped logs evolve into meaningful memories for personalization.</li>
+            <li><span class="font-medium">Intelligent Agent Routing:</span> connect user intents to powerful cloud agents, then execute plans locally for dynamic, responsive experiences.</li>
+            <li><span class="font-medium">Ready‑to‑Use Convo UI:</span> drop in voice, chat, and interactive elements (buttons, forms) to replace outdated forms with engaging dialogs—in minutes.</li>
+            <li><span class="font-medium">Compliance Made Easy:</span> track decisions and actions with built‑in analytics and audits—meet enterprise standards without extra effort.</li>
+            <li><span class="font-medium">Cross‑Platform Flexibility:</span> Android, iOS, and IoT; cloud‑neutral—perfect for the long tail of legacy apps waiting to go agentic.</li>
           </ul>
         </div>
         <div class="lg:pl-8">
